--- a/gb/20/9/22/n12421212.md
+++ b/gb/20/9/22/n12421212.md
@@ -1,6 +1,6 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/piedfj363/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/piedfj363/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/piedfj363/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/piedfj363/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/piedfj363/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/piedfj363/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/piedfj363/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/piedfj363/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/piedfj363/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/piedfj363/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/piedfj363/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/piedfj363/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/piedfj363/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/piedfj363/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/piedfj363/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/piedfj363/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/piedfj363/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/piedfj363/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/piedfj363/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/piedfj363/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/piedfj363/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/piedfj363/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/piedfj363/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/piedfj363/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/piedfj363/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/piedfj363/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/piedfj363/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/piedfj363/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/piedfj363/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/piedfj363/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/piedfj363/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/piedfj363/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/piedfj363/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/piedfj363/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/piedfj363/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/piedfj363/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/piedfj363/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/piedfj363/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/piedfj363/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/piedfj363/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/piedfj363/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/piedfj363/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/piedfj363/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/piedfj363/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/piedfj363/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/piedfj363/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/piedfj363/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/kobfyi3602/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/kobfyi3602/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/kobfyi3602/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>【医案】优哉游哉</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2020/10/200619031150100093-600x400.jpg" />
 <h6>莲花（王嘉益／大纪元）
@@ -11,8 +11,8 @@
 <p>美国有一项研究发现：一个人的生命中，生产力最高的阶段是60～70岁。第二高生产力阶段是70～80岁。第三高生产力阶段是50～60岁。诺贝尔得奖者的平均年龄是62岁。教宗平均年龄，是76岁。所以年龄不是问题，心态才是问题。</p>
 <p>一位担任公家机关一级主管的男士，平日呼风唤雨，一言九鼎，前呼后拥，领导的魄力与魅力，锐不可当。法律是公平的，65岁了，非届龄退休不可，后生可畏，可等着前仆后继。不管荣退的贺词和欢送宴，多么风光，这位长官很快就尝到，门庭若市和门可罗雀，那种落差、落寞交争煎，尤其是过年过节和生日的时候，特别明显。爬得越高，跌得越重，是人情冷暖？还是现实残酷？接下来的日子要怎么过？</p>
 <p>退休后半年，长官人陆续出现头昏，头胀，胃胀，有时睡不好，全身酸痛，精神怎么就一落千丈？脑筋好像也不灵光了？怎么会差那么多？一线之隔，人体就衰退那么快？不会吧！子女催促他去看医生。</p>
-<p>长官人出现在诊间，风度翩翩，威风凛凛，神气昂扬，将帅之姿，仍在眉宇间展露，只是眼神迷茫。经诊察后，好像没他说的这么严重，莫非是<ahref="https://github.com/piedfj363/djy/blob/master/gb/tag/%E9%80%80%E4%BC%91%E7%97%87%E5%80%99%E7%BE%A4.md#1">退休症候群</a>？用<ahref="https://github.com/piedfj363/djy/blob/master/gb/tag/%E9%92%88%E7%81%B8.md#1">针灸</a>调理。</p>
-<p><strong><ahref="https://github.com/piedfj363/djy/blob/master/gb/tag/%E9%92%88%E7%81%B8.md#1">针灸</a>处理：</strong></p>
+<p>长官人出现在诊间，风度翩翩，威风凛凛，神气昂扬，将帅之姿，仍在眉宇间展露，只是眼神迷茫。经诊察后，好像没他说的这么严重，莫非是<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E9%80%80%E4%BC%91%E7%97%87%E5%80%99%E7%BE%A4.md#1">退休症候群</a>？用<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E9%92%88%E7%81%B8.md#1">针灸</a>调理。</p>
+<p><strong><ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E9%92%88%E7%81%B8.md#1">针灸</a>处理：</strong></p>
 <p>醒脑开窍，针百会穴；安神，针神庭穴对刺；对人生看淡，针太阳穴，由上而下；提振低潮情绪，针太阳穴旁约0.2寸，由下而上透刺；养脾胃，针足三里、三阴交穴；头昏，头胀，针风池穴；开四肢关节气机，针合谷、太冲穴。</p>
 <p>针灸后，给长官人开处方：每天早上天亮后，傍晚天黑前，各走路30分钟。第2周回诊，长官人精神改善，但他说走路好无聊。再开处方：走路时算电线杆数，看到电灯不亮的路灯，记下来，通知电力公司。长官人满眼疑惑，莫名其妙，这是什么药方？医生的脑筋是否有问题？</p>
 <p>其实生活中让我们幸福的都是无关紧要的，琐琐碎碎的小事。长官人头脑比我好，他自行增加处方内容，每天走不同路线，自己所住社区走完，再走其他社区，以步行1～2小时为限。都走完了，步行达不到的地方，就坐公车去，下车后，继续走，乐在其中。在台中坐公车10公里免费，加上老人福利，65岁以上长者，每月有1000元的乘车卡，用也用不完。</p>
@@ -24,56 +24,56 @@
 <p>心里装着童年，生理留在尘世。70岁了，果然人生70才开始，最大的彻悟是，以前为别人而活、为名利而活，现在要为什么而活？老天还给多少生命？还有多少日子可过？</p>
 <p>长官人彻底领悟生命的可贵，人生短暂啊！珍惜每个当下，珍惜有缘人。真是无心插柳柳成荫，有时候，病人反而教我许多人生的道理。</p>
 <p>吟着李白的“浮云游子意，落日故人情。”再咀嚼着卜算子的“才始送春归，又送君归去，若到江南赶上春，千万和春住。”意境深远，别有一番滋味在心头。@</p>
-<p>选自《<ahref="https://github.com/piedfj363/djy/blob/master/gb/tag/%E5%85%AD%E6%8C%87%E5%8C%BB%E6%89%8B.md#1">六指医手</a>——为无明点灯》／博大出版<ahref="http://broadpressinc.com/">http://broadpressinc.com/</a></p>
-<figure id="attachment_12262259" aria-describedby="caption-attachment-12262259" style="width: 300px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2020/07/20200717-shuhuaqiu-Six-Finger-God-Hand-01.jpg"><img class="wp-image-12262259" src="https://i.epochtimes.com/assets/uploads/2020/07/20200717-shuhuaqiu-Six-Finger-God-Hand-01-600x853.jpg" alt="六指医手" width="300" b="426" /></a><figcaption id="caption-attachment-12262259" class="wp-caption-text"><ahref="https://github.com/piedfj363/djy/blob/master/gb/tag/%E5%85%AD%E6%8C%87%E5%8C%BB%E6%89%8B.md#1">六指医手</a> 封面。（博大出版提供）</figcaption></figure>
+<p>选自《<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E5%85%AD%E6%8C%87%E5%8C%BB%E6%89%8B.md#1">六指医手</a>——为无明点灯》／博大出版<ahref="http://broadpressinc.com/">http://broadpressinc.com/</a></p>
+<figure id="attachment_12262259" aria-describedby="caption-attachment-12262259" style="width: 300px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2020/07/20200717-shuhuaqiu-Six-Finger-God-Hand-01.jpg"><img class="wp-image-12262259" src="https://i.epochtimes.com/assets/uploads/2020/07/20200717-shuhuaqiu-Six-Finger-God-Hand-01-600x853.jpg" alt="六指医手" width="300" b="426" /></a><figcaption id="caption-attachment-12262259" class="wp-caption-text"><ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E5%85%AD%E6%8C%87%E5%8C%BB%E6%89%8B.md#1">六指医手</a> 封面。（博大出版提供）</figcaption></figure>
 <p>责任编辑：李昀◇</p>
-<p><em>点阅【<span style="color: #000080;"><a style="color: #000080;" href="https://github.com/piedfj363/djy/blob/master/gb/tag/温嫔容医案专栏.md#1">温嫔容医案专栏</a></span>】系列文章。</em></p>
+<p><em>点阅【<span style="color: #000080;"><a style="color: #000080;" href="https://github.com/kobfyi3602/djy/blob/master/gb/tag/温嫔容医案专栏.md#1">温嫔容医案专栏</a></span>】系列文章。</em></p>
 
 <hr>
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/piedfj363/djy/blob/master/gb/20/7/24/n12279580.md#1">【医案】问君能有几多愁</a></li>
-<li><a href="https://github.com/piedfj363/djy/blob/master/gb/20/7/25/n12282361.md#1">【医案】一柱擎天</a></li>
-<li><a href="https://github.com/piedfj363/djy/blob/master/gb/20/7/25/n12282829.md#1">【医案】任他明月下西楼</a></li>
-<li><a href="https://github.com/piedfj363/djy/blob/master/gb/20/7/29/n12291755.md#1">【医案】古道 西风 瘦马</a></li>
-<li><a href="https://github.com/piedfj363/djy/blob/master/gb/20/7/30/n12293812.md#1">【医案】春风十里柔情</a></li>
-<li><a href="https://github.com/piedfj363/djy/blob/master/gb/20/7/30/n12294590.md#1">【医案】一眸春水照人寒</a></li>
-<li><a href="https://github.com/piedfj363/djy/blob/master/gb/21/10/21/n13320667.md#1">超越常理的唐朝神奇治病方法</a></li>
-<li><a href="https://github.com/piedfj363/djy/blob/master/gb/21/8/9/n13148702.md#1">【医案】老有所终终哪桩</a></li>
-<li><a href="https://github.com/piedfj363/djy/blob/master/gb/21/8/9/n13148695.md#1">【医案】切肤之痛</a></li>
-<li><a href="https://github.com/piedfj363/djy/blob/master/gb/21/7/9/n13078214.md#1">【医案】苦瓜之争</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/7/24/n12279580.md#1">【医案】问君能有几多愁</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/7/25/n12282361.md#1">【医案】一柱擎天</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/7/25/n12282829.md#1">【医案】任他明月下西楼</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/7/29/n12291755.md#1">【医案】古道 西风 瘦马</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/7/30/n12293812.md#1">【医案】春风十里柔情</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/7/30/n12294590.md#1">【医案】一眸春水照人寒</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/21/10/21/n13320667.md#1">超越常理的唐朝神奇治病方法</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/21/8/9/n13148702.md#1">【医案】老有所终终哪桩</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/21/8/9/n13148695.md#1">【医案】切肤之痛</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/21/7/9/n13078214.md#1">【医案】苦瓜之争</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank">中共迫害良心律师</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/11/18/n10859288.md#1" target="_blank">慧勉：古代官员善心理政故事数则</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/14/10/23/n4278970.md#1" target="_blank">唐风：加拿大警官看完《转法轮》之后</a></li>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank">中共迫害良心律师</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/5/1/n10353384.md#1" target="_blank">郑恩宠：中国打压 招安律师与林昭精神</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/12/11/n10902768.md#1" target="_blank">美向联合国提出关注 促中共停止迫害法轮功</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/piedfj363/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
-<li><a href="https://github.com/piedfj363/djy/blob/master/gb/22/2/14/n13576687.md#1">【百年真相】瞒天过海 中共炮制“美军细菌战”</a></li>
-<li><a href="https://github.com/piedfj363/djy/blob/master/gb/22/2/21/n13594841.md#1">【未解之谜】梅辛传之四：权势抵不过天意</a></li>
-<li><a href="https://github.com/piedfj363/djy/blob/master/gb/22/2/18/n13586699.md#1">【奇医】神医的再传弟子 看病有慧眼立奇功</a></li>
-<li><a href="https://github.com/piedfj363/djy/blob/master/gb/22/2/14/n13575567.md#1">【人生之钥】算命人的秘诀：告诉你算命准与不准的原因</a></li>
-<li><a href="https://github.com/piedfj363/djy/blob/master/gb/22/2/28/n13612301.md#1">【远见快评】俄入侵闪电战失败 国际秩序重组</a></li>
-<li><a href="https://github.com/piedfj363/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
-<li><a href="https://github.com/piedfj363/djy/blob/master/gb/22/2/26/n13607632.md#1">【时事军事】特种部队 俄入侵乌克兰的秘密武器</a></li>
-<li><a href="https://github.com/piedfj363/djy/blob/master/gb/22/2/25/n13605832.md#1">保持心脏健康 营养师推荐在Costco买六种食物</a></li>
-<li><a href="https://github.com/piedfj363/djy/blob/master/gb/22/2/26/n13607072.md#1">【更新2.26】俄军遭遇后勤挑战与坚定抵抗</a></li>
-<li><a href="https://github.com/piedfj363/djy/blob/master/gb/22/2/27/n13608596.md#1">徐州铁链女事件持续发酵 中国金融圈怒了</a></li>
-<li><a href="https://github.com/piedfj363/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
-<li><a href="https://github.com/piedfj363/djy/blob/master/gb/22/2/27/n13607917.md#1">家乡遭俄军攻击 瑞莎崩溃怒喊：究竟为了什么</a></li>
-<li><a href="https://github.com/piedfj363/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
-<li><a href="https://github.com/piedfj363/djy/blob/master/gb/22/2/27/n13607417.md#1">《维京传奇：英灵神殿》影评：复仇成功 只是挑战的开始</a></li>
-<li><a href="https://github.com/piedfj363/djy/blob/master/gb/22/2/28/n13612151.md#1">TVB视后胡定欣确诊 陈豪吓得睡觉都戴口罩</a></li>
-<li><a href="https://github.com/piedfj363/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
-<li><a href="https://github.com/piedfj363/djy/blob/master/gb/22/2/26/n13607115.md#1">【直播】疫情、疫苗 CDC没告诉你的2件事</a></li>
-<li><a href="https://github.com/piedfj363/djy/blob/master/gb/22/2/26/n13606670.md#1">每个人在选择油漆颜色时都会犯的6个错误</a></li>
-<li><a href="https://github.com/piedfj363/djy/blob/master/gb/22/2/26/n13606713.md#1">俄乌战火将如何波及美国房地产？</a></li>
-<li><a href="https://github.com/piedfj363/djy/blob/master/gb/22/2/26/n13607236.md#1">台北内湖乐活公园樱花绽放 假日踏青赏樱</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/12/n13734778.md#1">【百年真相】替毛背锅“红色特工”潘汉年惨死</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/5/n13727490.md#1">【百年真相】密谋“金融政变” 肖建华将现身？</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/28/n13747559.md#1">一首名曲奏出大提琴前所未有的力量</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/29/n13748202.md#1">【未解之谜】通行灵界的科学家之二 天堂见闻</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/18/n13739799.md#1">【奇梦】姻缘天定 女子依梦得夫 男子依梦得妻</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752277.md#1">【马克时空】预警机、侦察机扮奇兵 助乌军精准打击俄军</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/26/n13746033.md#1">【探索时分】四大理由 中共应向俄罗斯开战？</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752508.md#1">【唐瑞讲故事】睡美人</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751953.md#1">刚送完满月礼盒 昆凌首晒产后全身照惊呆网友</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752436.md#1">李克强十万人大会事先获得习近平默许？</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752163.md#1">深圳前市长陈如桂落马 传有三大原因</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751953.md#1">刚送完满月礼盒 昆凌首晒产后全身照惊呆网友</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751923.md#1">港星杨英伟出售千万房产 已举家移民奥地利</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751832.md#1">评论：《壮志凌云2》证明好莱坞无需中国市场</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751310.md#1">张娜拉6月底结婚 赞新郎笑容美好且诚实善良</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/2/n13751276.md#1">好莱坞明星强尼戴普诽谤案胜诉 台主播发感言</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/26/n13746023.md#1">腰痛是肾脏在求救？肾是沉默器官 4症状要警惕</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/1/n13750249.md#1">长白发原因不一定是衰老！2种方法白发变黑发</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751690.md#1">危险长新冠4类人警惕 疫苗也挡不住？1招改善</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751309.md#1">研究发现人类肝脏永远年轻 只有不到三岁</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752195.md#1">5个早上常见的习惯 会降低睡眠品质</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/piedfj363/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/piedfj363/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/9/22/n12421212.htm">【医案】优哉游哉</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/9/22/n12421212.htm">【医案】优哉游哉</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/piedfj363/djy/blob/master/gb/20/9/22/n12421212.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/piedfj363/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/piedfj363/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/piedfj363/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/piedfj363/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/piedfj363/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/piedfj363/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/piedfj363/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/piedfj363/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/piedfj363/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/piedfj363/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/piedfj363/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/piedfj363/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/piedfj363/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/piedfj363/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/piedfj363/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/piedfj363/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/piedfj363/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/piedfj363/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/piedfj363/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/piedfj363/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/piedfj363/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/piedfj363/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/piedfj363/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/piedfj363/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/piedfj363/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/piedfj363/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/piedfj363/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/piedfj363/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/piedfj363/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/piedfj363/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/piedfj363/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/piedfj363/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/piedfj363/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/piedfj363/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/piedfj363/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/piedfj363/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/piedfj363/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/piedfj363/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/piedfj363/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/piedfj363/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/piedfj363/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/piedfj363/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/piedfj363/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/piedfj363/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/piedfj363/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/piedfj363/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/piedfj363/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/piedfj363/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/kobfyi3602/djy/blob/master/gb/20/9/22/n12421212.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/kobfyi3602/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/kobfyi3602/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
